modified:   share/pixmaps/deuscoin128.xpm 	modified:   share/pixmaps/deuscoin16.xpm 	modified:   share/pixmaps/deuscoin256.xpm 	modified:   share/pixmaps/deuscoin32.xpm 	modified:   share/pixmaps/deuscoin64.xpm 	modified:   share/qt/Info.plist.in 	modified:   share/qt/extract_strings_qt.py 	modified:   share/qt/make_windows_icon.sh 	modified:   share/setup.nsi.in 	modified:   share/ui.rc 	modified:   tools/sed-replace.sh

--- a/share/ui.rc
+++ b/share/ui.rc
@@ -1,4 +1,4 @@
-bitcoin               ICON    "pixmaps/bitcoin.ico"
+deuscoin               ICON    "pixmaps/deuscoin.ico"
 
 #include "wx/msw/wx.rc"
 
