modified:   Makefile.am 	modified:   configure.ac 	modified:   contrib/macdeploy/DS_Store 	modified:   contrib/macdeploy/background.png 	modified:   contrib/spendfrom/setup.py 	modified:   doc/release-notes/release-notes-0.9.0.md 	modified:   qa/pull-tester/build-tests.sh.in 	modified:   qa/pull-tester/pull-tester.py 	modified:   qa/pull-tester/pull-tester.sh 	modified:   qa/pull-tester/run-deuscoind-for-test.sh.in 	modified:   qa/rpc-tests/README.md 	modified:   qa/rpc-tests/conflictedbalance.sh 	modified:   qa/rpc-tests/getblocktemplate.py 	modified:   qa/rpc-tests/getchaintips.py 	modified:   qa/rpc-tests/keypool.py 	modified:   qa/rpc-tests/listtransactions.py 	modified:   qa/rpc-tests/python-deuscoinrpc/deuscoinrpc/authproxy.py 	modified:   qa/rpc-tests/python-deuscoinrpc/setup.py 	modified:   qa/rpc-tests/receivedby.py 	modified:   qa/rpc-tests/rpcbind_test.py 	modified:   qa/rpc-tests/send.sh 	modified:   qa/rpc-tests/smartfees.py 	modified:   qa/rpc-tests/test_framework.py 	modified:   qa/rpc-tests/txnmall.sh 	modified:   qa/rpc-tests/util.py 	modified:   qa/rpc-tests/util.sh 	modified:   qa/rpc-tests/wallet.sh 	modified:   qa/rpc-tests/walletbackup.sh 	modified:   qa/rpc-tests/zapwallettxes.sh 	modified:   share/pixmaps/deuscoin.ico 	modified:   share/pixmaps/deuscoin128.png 	modified:   share/pixmaps/deuscoin128.xpm 	modified:   share/pixmaps/deuscoin16.png 	modified:   share/pixmaps/deuscoin16.xpm 	modified:   share/pixmaps/deuscoin256.png 	modified:   share/pixmaps/deuscoin256.xpm 	modified:   share/pixmaps/deuscoin32.png 	modified:   share/pixmaps/deuscoin32.xpm 	modified:   share/pixmaps/deuscoin64.png 	modified:   share/pixmaps/deuscoin64.xpm 	modified:   share/pixmaps/favicon.ico 	modified:   share/pixmaps/nsis-header.bmp 	modified:   share/pixmaps/nsis-wizard.bmp 	modified:   share/seeds/nodes_main.txt 	modified:   share/setup.nsi.in 	modified:   src/Makefile.qt.include 	modified:   src/clientversion.h 	modified:   src/qt/deuscoin.qrc 	modified:   s

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -255,9 +255,9 @@ RES_ICONS = \
   qt/res/icons/tx_input.png \
   qt/res/icons/tx_output.png \
   qt/res/icons/tx_mined.png \
-  qt/res/icons/unit_btc.png \
-  qt/res/icons/unit_mbtc.png \
-  qt/res/icons/unit_ubtc.png
+  qt/res/icons/unit_deus.png \
+  qt/res/icons/unit_mdeus.png \
+  qt/res/icons/unit_udeus.png
 
 DEUSCOIN_QT_CPP = \
   qt/deuscoinaddressvalidator.cpp \
